buy-button text fixes, list alignmetn fixes

--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -121,5 +121,7 @@
 
 ul, ol {
     list-style-type: none;
+    padding-left: 0 !important;
+    margin-left: 0 !important;
 }
 
